worked more on the features

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button id="localJsonButton" class="btn btn-outline-dark">Get JSON Data</button>
       <button id="gitHubUsersButton" class="btn btn-success">Get GitHub Users</button>
     </div>
-    <!-- <h1 style="position: absolute; margin-top: 350px;" id="textContent"></h1> -->
+    <h1 style="position: absolute; margin-top: 350px;" id="textContent"></h1>
 
     <div id="card" style="position: absolute; margin-top: 900px; width: 38rem;">
 
