worked on the margins and visbilities!

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <h1 style="position: absolute; margin-top: 350px;" id="textContent"></h1>
 
     <div id="card" style="position: absolute; margin-top: 900px; width: 38rem;">
-
     </div>
+
+    <div id="card2" style="position: absolute; margin-top: 183.875rem; width: 38rem;"></div>
 
   </div>
   </div>
