--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <button id="localJsonButton" class="btn btn-outline-dark">Get JSON Data</button>
       <button id="gitHubUsersButton" class="btn btn-success">Get GitHub Users</button>
     </div>
-    <h1 style="position: absolute; margin-top: 350px;" id="textContent"></h1>
+    <h1 style="position: absolute; margin-top: 21.875rem;" id="textContent"></h1>
 
-    <div id="card" style="position: absolute; margin-top: 900px; width: 38rem;">
+    <div id="card" style="position: absolute; margin-top: 56.25rem; width: 20rem;">
     </div>
 
-    <div id="card2" style="position: absolute; margin-top: 183.875rem; width: 38rem;"></div>
+    <div id="card2" style="position: absolute; margin-top: 183.875rem; width: 20rem;"></div>
 
   </div>
   </div>
